<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
         android:id="@+id/card1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         card_view:cardCornerRadius="5dp"
         card_view:cardElevation="5dp"
         android:background="?android:selectableItemBackground">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/todo" />
         <ImageView
             android:id="@+id/slika1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:src="@drawable/picture1"
             android:contentDescription="@string/todo" />
         <TextView
             android:id="@+id/slika1title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
             style="@style/TextAppearance.AppCompat.Headline"
             android:padding="@dimen/card_margin"
             android:text="@string/SomePicture"
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
             />

         <TextView
             android:id="@+id/ubtitle"
             style="@style/TextAppearance.AppCompat.Subhead"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/card_margin"
             android:text="@string/subtitle"
             android:textColor="?android:textColorSecondary"/>
         <ImageView
             android:id="@+id/slika2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:src="@drawable/picture2"
             android:contentDescription="@string/todo" />
         <TextView
             android:id="@+id/picturedescription"
             style="@style/TextAppearance.AppCompat.Subhead"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/card_margin"
             android:text="@string/pictureDecp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/button1"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/button2"/>
         </LinearLayout>
     </LinearLayout>
</androidx.cardview.widget.CardView>
 </LinearLayout>

